# learning_ROS2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/first_pkg/share/first_pkg/: package.ps1  package.sh  package.xml
install/first_pkg/share/first_pkg/launch/vid5/: listener.launch.py  talker.launch.py
install/first_pkg/share/first_pkg/launch/vid6/: robot_state_publisher.launch.py
learn_ws/install/: local_setup.sh  setup.sh
learn_ws/install/first_pkg/share/first_pkg/: package.dsv  package.sh  package.xml
learn_ws/install/first_pkg/share/first_pkg/launch/vid5/: listener.launch.py  talker.launch.py
learn_ws/install/first_pkg/share/first_pkg/launch/vid6/: robot_state_publisher.launch.py
learn_ws/install/first_pkg/share/first_pkg/launch/vid7/: rsp.launch.py  rsp_sim.launch.py
learn_ws/log/: latest_build
learn_ws/src/first_pkg/: package.xml  setup.py
learn_ws/src/first_pkg/launch/vid5/: listener.launch.py  talker.launch.py
learn_ws/src/first_pkg/launch/vid6/: frames_2026-04-11_22.33.23.gv  robot_state_publisher.launch.py
learn_ws/src/first_pkg/launch/vid7/: rsp_sim.launch.py
log/: latest_build
p_notes/personal/: quick_notes.md
p_notes/set_up_ros2/: creating_workspace.md
p_notes/vid_4/: basic_of_ros.md
p_notes/vid_5/: creating_workspace.md
p_notes/vid_6/: TF_system_dynamic.md  Transform_system_static.md
p_notes/vid_7/: URDF_guide.md
