<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>first_pkg</name>
  <version>0.0.0</version>
  <description>ROS2 learning pkg</description>
  <maintainer email="ant938153@gamil.com">awutio23</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- edit by me -->
  <!-- we add below bc both talker and listener nodes are using the demo_nodes_py package -->
  <exec_depend>demo_nodes_py</exec_depend>
  <!-- end of my edit -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
